/*
    message的格式说明如下:
        消息由至少一个字段组合而成，类似于Go语言中的结构体，每个字段都有一定的格式
        （字段修饰符）数据类型 字段名称 = 唯一的编号标签值;

    唯一的编号标签：
        代表每个字段的一个唯一的编号标签，在同一个消息里不可以重复。这些编号标签用与在消息二进制格式中标识你的字段，并且消息一旦定义就不能更改。需要说明的是标签在1到15范围的采用一个字节进行编码，所以通常将标签1到15用于频繁发生的消 息字段。
        编号标签大小的范围是1到2的29次。19000-19999是官方预留的值，不能使用。

    注释格式：
        向.proto文件添加注释，可以使用C/C++/java/Go风格的双斜杠或者段落注释语法格式。

    message常见的数据类型与go中类型对比:
        .proto类型            Go类型            介绍
        double              ﬂoat64          64位浮点数
        ﬂoat                ﬂoat32          32位浮点数
        int32               int32           使用可变长度编码。编码负数效率低下——如果你的字段可能有负值， 请改用sint32。
        int64               int64           使用可变长度编码。编码负数效率低下——如果你的字段可能有负值， 请改用sint64。
        uint32              uint32          使用可变长度编码。
        uint64              uint64          使用可变长度编码。
        sint32              int32           使用可变长度编码。符号整型值。这些比常规int32s编码负数更有效。
        sint64              int64           使用可变长度编码。符号整型值。这些比常规int64s编码负数更有效。
        ﬁxed32              uint32          总是四字节。如果值通常大于228，则比uint 32更有效
        ﬁxed64              uint64          总是八字节。如果值通常大于256，则比uint64更有效
        sﬁxed32             int32           总是四字节。
        sﬁxed64             int64           总是八字节。
        bool                bool            布尔类型
        string              string          字符串必须始终包含UTF - 8编码或7位ASCII文本
        bytes               []byte          可以包含任意字节序列
*/

syntax = "proto3";

package pb;

import "google/protobuf/any.proto";


option go_package = "../pb";


message Packet{
  string id = 1;
  string appId = 2;
  string userId = 3;
  int32 flow = 4;
  int32 needAck = 5;
  int32 type = 6;
  int64 cTime = 7;
  int64 sTime = 8;
  google.protobuf.Any body = 9;  // for the "any" type field
}

message MessageBody {
  string mType = 1;
  string cId = 2;
  string to = 3;
  string groupId = 4;
  int32 tType = 5;    // int8 in Go maps to int32 in Proto3
  int64 sequence = 6;
  google.protobuf.Any content = 7;  // For any type content
  repeated At at = 8;  // At list
  repeated Refer refer = 9;  // Refer list
}

message At {
  string userId = 1;
  string name = 2;
  string avatar = 3;
}

message Refer {
  string userId = 1;
  string name = 2;
  string avatar = 3;
  string mType = 4;
  google.protobuf.Any content = 5;  // For any type body
}

message TextContent {
  string text = 1;
}

message ImageContent {
  string url = 1;
  int32 width = 2;
  int32 height = 3;
}

message AudioContent {
  string url = 1;
  int32 length = 2;
}

message VideoContent {
  string url = 1;
  string cover = 2;
  int32 length = 3;
  int32 width = 4;
  int32 height = 5;
}